[project]
name = "functions"
version = "0.1.0"
description = ""
authors = [
    {name = "Alan", email = "alandeolivieradev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas (==2.1.1)",
    "numpy (==1.26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
